--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,11 @@
             <version>2.7.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.8.3</version>
+        </dependency>
 
     </dependencies>
 
