--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,12 @@
             <version>2.7.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.16</version>
+        </dependency>
+
 
     </dependencies>
 
