--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -39,4 +39,18 @@
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 
+    <listener>
+        <listener-class>org.springframework.security.web.session.HttpSessionEventPublisher</listener-class>
+    </listener>
+
+    <session-config>
+        <session-timeout>60</session-timeout>
+    </session-config>
+
+
+    <error-page>
+        <error-code>400</error-code>
+        <location>/error/code400</location>
+    </error-page>
+
 </web-app>
